# solana-data-aggregator

./: Cargo.toml  README.md
.sqlx/: query-081a4c06f7acd4e77296925346cac68cef45023772e961d5c95051edc1250689.json  query-809327612087dce2917117b8a93540eb433d717d7cfe9e40b310e19ca087e23a.json  query-ee8514587655f78412cb0af725a8d049098032319476217f122a79b9d969907a.json
src/: api.rs  data_processing.rs  data_retrieval.rs  data_storage.rs  main.rs
